--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "hoek": "^5.0.3",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "local-storage": "^2.0.0",
     "material-components-web": "^0.34.1",
     "material-ui": "^1.0.0-beta.41",
     "object-assign": "4.1.1",
@@ -43,8 +44,8 @@
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "raf": "3.4.0",
-    "react": "16.2.0",
-    "react-dev-utils": "^5.0.0",
+    "react": "^16.8.6",
+    "react-dev-utils": "^5.0.3",
     "react-dom": "16.2.0",
     "react-redux": "5.0.7",
     "react-router": "4.2.0",
@@ -58,7 +59,7 @@
     "three": "^0.92.0",
     "uniqid": "4.1.1",
     "url-loader": "0.6.2",
-    "uuid": "3.2.1",
+    "uuid": "^3.2.1",
     "vanilla-touchwipe": "^1.0.0",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
